--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,44 @@
 }
 
 
+
+@article{benegas2025,
+	title = {Genomic language models: opportunities and challenges},
+	author = {Benegas, Gonzalo and Ye, Chengzhong and Albors, Carlos and Li, Jianan Canal and Song, Yun S.},
+	year = {2025},
+	month = {01},
+	date = {2025-01},
+	journal = {Trends in Genetics},
+	doi = {10.1016/j.tig.2024.11.013},
+	url = {http://dx.doi.org/10.1016/j.tig.2024.11.013},
+	langid = {en}
+}
+
+@article{riesselman2018,
+	title = {Deep generative models of genetic variation capture the effects of mutations},
+	author = {Riesselman, Adam J. and Ingraham, John B. and Marks, Debora S.},
+	year = {2018},
+	month = {09},
+	date = {2018-09-24},
+	journal = {Nature Methods},
+	pages = {816--822},
+	volume = {15},
+	number = {10},
+	doi = {10.1038/s41592-018-0138-4},
+	url = {http://dx.doi.org/10.1038/s41592-018-0138-4},
+	langid = {en}
+}
+
+@article{benegas2023,
+	title = {DNA language models are powerful predictors of genome-wide variant effects},
+	author = {Benegas, Gonzalo and Batra, Sanjit Singh and Song, Yun S.},
+	year = {2023},
+	month = {10},
+	date = {2023-10-26},
+	journal = {Proceedings of the National Academy of Sciences},
+	volume = {120},
+	number = {44},
+	doi = {10.1073/pnas.2311219120},
+	url = {http://dx.doi.org/10.1073/pnas.2311219120},
+	langid = {en}
+}
