--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,31 @@
 # Preface {.unnumbered}
 
-These are study notes I take while exploring how to train DNA/RNA/Protein language models. **Chapter one covers** downloading (DNA) sequences data from ensembl and uploading it to Huggingface. **Chapter two covers** training a first small DNA sequence language model.
+These are study notes on training DNA/RNA/Protein and other biomedical language models. The book is intended for peopel who will either on-ramp to actually train DNA/Biological language models, or for their PIs, all anxious aging millennial and bitter gen-X'ers who want to be able to understand the next generation of computational genomics that is about to wash over us all.
 
-These notes are written by me, Michel Nivard, and as this book is not a core outputs for my job, I rely heavily on LLMs to help me with spelling and formatting.
+At all times I'll try to add minimal biological context (though I am no biologist!) for people who ave an ML background but no college bio experience and ill try to add context on ML concepts for those with a bio background but limited experience with language models.
+
+## Structure
+
+The book is divided up into sections that deal with a specific modality or data type.
+
+The first section covers DNA language models
+
+**Chapter 1 covers** downloading (DNA) sequences data from ensembl and uploading it to Huggingface. **Chapter 2 covers** training a first small DNA sequence language model. in **Chapter 3** we explore how you'd evaluate whether a DNA model is any good, is our model learning anything at all?
+
+The second section will cover RNA language models
+
+The thirds section will cover protein language models
+
+The forth section covers epidemiological language models
+
+## Practicalities
+
+The book is accompanied by scripts in both the R and Python programming languages. IF you want to code along, and aren't training any models that need to out compete the state of the art you can run most of this on a macbook. Maybe you'll need to run a training run overnight. If you want a bit more performance you can use google colab for access to A100 GPUs training the DNABert we outline in Chapter 2 on 500k coding sequences from 13 species took ±6 hours on an A100 on Colab, which means that cost me ±4\$ in colab credit.
+
+I can highly recommend using positron as an IDE when following along with this book (<https://positron.posit.co>), its a vscode fork, and a great alternative to RStudio. it has tooling integrated for datascience in both python and R and I can switch between python and R sessions instantly!
+
+## Acknowledgements
+
+These notes are written by me, Michel Nivard, a professor of Epidemiology at the University of Bristol, and as this book is not a core outputs for my job, I rely heavily on LLMs to help me with spelling and formatting.
 
 These study notes are influences by discussion with Robbee Wedow and Seyedeh Zahra Paylakhi with whom I work on relate projects.
