--- a/index.qmd
+++ b/index.qmd
@@ -1,22 +1,22 @@
 # Preface {.unnumbered}
 
-These are study notes on training DNA/RNA/Protein and other biomedical language models. The book is intended for peopel who will either on-ramp to actually train DNA/Biological language models, or for their PIs, all anxious aging millennial and bitter gen-X'ers who want to be able to understand the next generation of computational genomics that is about to wash over us all.
+These are my study notes on training DNA/RNA/Protein and other biomedical language models. The text/book is intended for people who want to casually explore the field before they on-ramp to actually training large DNA/Biological language models, or for their PIs, an anxious aging millennial or bitter but wise gen-X'ers who want to be able to understand the next generation of computational genomics that is about to wash over us all.
 
-At all times I'll try to add minimal biological context (though I am no biologist!) for people who ave an ML background but no college bio experience and ill try to add context on ML concepts for those with a bio background but limited experience with language models.
+At all times I'll try to add minimal biological context (though I am no biologist!) for people who have an ML background but no college bio experience and ill try to add context on ML concepts for those with a bio background but limited experience with language models.
 
 ## Structure
 
 The book is divided up into sections that deal with a specific modality or data type.
 
-The first section covers DNA language models
+### DNA language models
 
 **Chapter 1 covers** downloading (DNA) sequences data from ensembl and uploading it to Huggingface. **Chapter 2 covers** training a first small DNA sequence language model. in **Chapter 3** we explore how you'd evaluate whether a DNA model is any good, is our model learning anything at all?
 
-The second section will cover RNA language models
+### RNA language models
 
-The thirds section will cover protein language models
+### protein language models
 
-The forth section covers epidemiological language models
+### Epidemiological language models
 
 ## Practicalities
 
