--- a/Chapter3.qmd
+++ b/Chapter3.qmd
@@ -172,7 +172,7 @@ write.csv(file="DRD2_mutations.csv",output)
 
 The code can be used to generate massive amounts of mutations for validation, but missense vs synonymous is a very simple and crude distinction to make! to fully validate a DNA model we'll want to obtain additional external information and well do so in later chapters!
 
-## Evaluating Mutant Likelihoods with a BERT Model
+## Evaluating base position likelihoods with a BERT Model
 
 In machine learning terms, the **MLM loss** is the **negative log likelihood (NLL)** of the correct nucleotide. For example, if the correct nucleotide is "A" at a given position, and the model assigns "A" a probability of 0.8, then the contribution to the loss is:
 
@@ -262,13 +262,15 @@ def compute_mutant_log_likelihood_ratio(wild_type, mutant, position, tokenizer, 
     return log_prob_wild - log_prob_mutant
 ```
 
-### The Likelihood Ratio as a metric for mutations
+### The Likelihood Ratio to evaluate mutations
 
 The log-likelihood ratio (LLR) compares how much more (or less) likely the wild-type sequence is compared to a mutant sequence, given the DNA language model. Specifically, we compare the log likelihood of the correct wild-type nucleotide to the log likelihood of the mutant nucleotide at the mutated position only.
 
-L L R = log ⁡ P ( wild-type nucleotide ∣ context ) − log ⁡ P ( mutant nucleotide ∣ context ) LLR=logP(wild-type nucleotide∣context)−logP(mutant nucleotide∣context) This metric is widely used in bioinformatics because it focuses on the exact site of the mutation, instead of comparing entire sequences. A positive LLR indicates the wild-type is favored by the model, while a negative LLR means the mutant is more likely.
+$$LLR = log ⁡ P ( wild-type nucleotide ∣ context ) − log ⁡ P ( mutant nucleotide ∣ context )$$
 
-We then apply these functions to all the synthetic DRD2 mutations we generated (in the first 512 bases) to evaluate whether the DNABert we trained thinks the missense mutations are generally less likely given the model.
+This metric is widely used in bioinformatics because it focuses on the exact site of the mutation, instead of comparing entire sequences. A positive LLR indicates the wild-type is favored by the model (the mutation is unlikely and therefore possibly deliterious), while a negative LLR means the mutant is more likely (the mutation is neural or maybe even protectivr).
+
+We then apply these functions to all the synthetic DRD2 mutations we generated (in the first 512 bases) to evaluate whether the DNABert we trained thinks the missense mutations are generally less likely, and therefore possibly damaging, given the model.
 
 ``` python
 # Load dataset directly from Hugging Face dataset repo
@@ -285,26 +287,34 @@ results = []
 for idx, row in df.iterrows():
     sequence = row['sequence'][:MAX_CONTEXT_LENGTH]
     mutation_type = row['mutation_type']
-    mutation_position = int(row['mutation_position']) - 1  # Convert 1-based to 0-based
+    mutation_position = row['mutation_position'] - 1  # Convert 1-based to 0-based
 
     # Skip mutants where the mutation position is beyond 512 bases
     if mutation_type != 'wildtype' and mutation_position >= MAX_CONTEXT_LENGTH:
         continue
 
-    pll = compute_log_likelihood(sequence, tokenizer, model)
+    print(idx)
 
     llr = None
+    log_prob_wild = None
+    prob_wild = None
+
     if mutation_type != 'wildtype':
-        llr = compute_mutant_log_likelihood_ratio(
-            wild_type_sequence, sequence, mutation_position, tokenizer, model
+        llr, log_prob_wild, prob_wild = compute_mutant_log_likelihood_ratio(
+            wild_type_sequence, sequence, int(mutation_position), tokenizer, model
         )
 
+    # append results for each mutation:
     results.append({
         'sequence': sequence,
         'mutation_type': mutation_type,
-        'pll': pll,
-        'llr': llr
+        'pll': 0,
+        'llr': llr,
+        'wildtype_log_prob': log_prob_wild,
+        'wildtype_prob': prob_wild,
+        'mutation_position': mutation_position + 1
     })
+
 
 # Convert to DataFrame for saving or inspection
 results_df = pd.DataFrame(results)
@@ -318,11 +328,51 @@ results_df.to_csv("sequence_log_likelihoods.csv", index=False)
 
 ### Language Models Provide Biological Insight trough the likelihood ratio
 
-Why do we care about these log likelihoods and likelihood ratios? Because they provide a direct, data-driven estimate of how plausible or "natural" each sequence looks to the model. Since the model was trained on real DNA sequences, sequences with high likelihoods resemble biological reality, while sequences with low likelihoods deviate from patterns the model has learned.
+Why do we care about these log likelihoods and log likelihood ratios? Because they provide a direct, data-driven estimate of how plausible or "natural" each mutated sequence looks to the model compared to the wild type sequence. Since the model was trained on real DNA sequences, sequences with high likelihoods resemble biological reality, while sequences with low likelihoods deviate from patterns the model has learned. A high "mutation log likelihood ratio" corresponds tot he model strongly favoring the reference sequences over the mutation. This test lets us flag potentially deleterious mutations (those with sharp likelihood drops), prioritize candidate variants for functional follow-up, or even explore adaptive evolution by identifying mutations that DNA BERT "likes" more than the wild-type
 
-This lets us flag potentially deleterious mutations (those with sharp likelihood drops), prioritize candidate variants for functional follow-up, or even explore adaptive evolution by identifying mutations that DNA BERT "likes" more than the wild-type.
+To explore our result here, we can plot the LLR versus the position within the DRD2 gene, this can give us insight into the location within the coding sequence where we find unlikely (and therefore potentially damaging) mutations. in the lot below a LOW LLR means the variant is unlikely. Most variants cluster around a neural LLR, consistent with some statistical noise.
 
-Lets first simply plot the likelihood ratio's for all synonymous and missense mutations we introduced to DRD2:
+``` python
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+import seaborn as sns
+
+# Filter to only mutations (skip wildtype which has no llr)
+plot_df = results_df[results_df['mutation_type'].isin(['synonymous', 'missense'])].copy()
+
+
+# Optional: Clip LLR to avoid excessive sizes
+plot_df['size'] = plot_df['llr'].clip(-5, 5)  # LLRs smaller than -5 get maximum size
+
+# Scatter plot with enhanced size scaling
+plt.figure(figsize=(14, 5))
+sns.scatterplot(
+    x='mutation_position', 
+    y='llr', 
+    hue='mutation_type', 
+    size='size',  # Use clipped size column
+    sizes=(20, 200),  # Bigger range for better visibility
+    alpha=0.7, 
+    palette={'synonymous': 'green', 'missense': 'orange'},
+    data=plot_df
+)
+plt.axhline(0, color='gray', linestyle='--', label='Neutral LLR')
+plt.title('Mutation Log Likelihood Ratio (LLR) Along DRD2 Gene')
+plt.xlabel('Position in Gene')
+plt.ylabel('Log Likelihood Ratio (LLR)')
+plt.legend(title='Mutation Type', bbox_to_anchor=(1.02, 1), loc='upper left')
+plt.grid(True, linestyle='--', alpha=0.5)
+plt.show()
+```
+
+![](images/paste-9.png)
+
+ou'll notice from the plot along the coding sequence that 1. really almost all very unlikely mutations (positive LLR) are missense mutations and 2. There are potentially certain locations within this particular coding sequence where there is an abundance of unlikely mutations packed closely together, these could be regions that are intolerant to deleterious mutations.
+
+Its important to not get overconfident in our predictions! Rember this is a relatively tiny DNA sequence model (±5m parameters) we trained on sequences for 13 fairly randomly picked vertebrae. Lets look at the likelihood of the true base in the references (wild-type) sequence given the model. The mean probability is 40%, given the model essentially is trying to pick between 4 tokens (G,C,T & A) 40% is considerably better then chance! Its also clear the probability is not even across the gene, the first few based are almost certain (almost all coding sequences in these species start with the start codon ATG, the model obviously learned this). After that there is quite a spread, which is logical I think, in many places across the sequence the specific base might be very obvious, as all three alternates might be missense mutations, but in other spot one, two or even all three alternate tokens might be synonymous, and perhaps even present int he analog gene int he other 12 species we trained our model on! This would make the model FAR less certain about the true base at that location.
+
+![](images/paste-10.png)
 
 ## Summary
 
