--- a/Chapter1.qmd
+++ b/Chapter1.qmd
@@ -3,6 +3,12 @@ title: "Preparing DNA data for training"
 format: html
 ---
 
+::: callout-tip
+## Abstract
+
+In this chapter we'll learn how to create a high fidelity DNA datasets. Two datasets I have created are available on Huggingface: [the human CDS](https://huggingface.co/datasets/MichelNivard/Human-genome-CDS-GRCh38) and [the CDS of 13 vertebrae species](https://huggingface.co/datasets/MichelNivard/Coding_Sequences_13_Species).
+:::
+
 ## Garbage in garbage out
 
 High-quality data is essential for training effective machine learning models. In natural language processing (NLP), researchers invest significant effort in curating clean datasets from raw internet text. For example a dataset like 'fineweb-edu' contains English text that is of very high quality. Models trained on fineweb-edu (and similar high quality datasets) will improve MUCH faster then the equivalent model trained on other less carefully processed and evaluated datasets.
