--- a/Chapter2.qmd
+++ b/Chapter2.qmd
@@ -1,7 +1,12 @@
 ---
 title: "Training our first DNA Language Model"
-format: html
 ---
+
+::: callout-tip
+## Abstract
+
+In this chapter we'll train an DNA language model. To do a full training run you'll need newer Macbook (±24 hours), a gaming PC with GPU (10-12 hours) or google colab with the A100 GPU (±6 hours). If you don't have the compute you can download [DNABert](https://huggingface.co/MichelNivard/DNABert-CDS-13Species-v0.1), a model trained based on this code fur use in the next few chapters.
+:::
 
 ## Introduction
 
